some formatiing changes

--- a/static/index.html
+++ b/static/index.html
@@ -22,8 +22,8 @@
 
 
 
-		<strong><title>erthe</title></strong>
-
+		<strong><title>erthe</title></strong
+>
 		<style>
 			
 			#map { margin-top: 65px; height: 50%; }
