Added optional map-view button

--- a/static/untitled.html
+++ b/static/untitled.html
@@ -164,3 +164,7 @@ popup
 		res.json(items);
 	});
   	}
+
+
+
+  	<button type="button" ng-click="set_marker()" class="btn btn-success pull-right" style="margin:10px"><i class="fa fa-map-marker"></i> &nbsp;New hype</button>
