--- a/static/post.html
+++ b/static/post.html
@@ -1,6 +1,6 @@
 
-
 <div class="myclass" >
+<a href="/"  style="color:#B2D40A;text-decoration:none"> back</a>
 				
 					<h6>
 						{{post.date}} , {{post.country}} , {{post.state}} , {{post.city}}
