font and date and place view change

--- a/static/index.html
+++ b/static/index.html
@@ -71,7 +71,7 @@
 
 			<div class="container-fluid">
 				<div class="navbar-header">
-					<a class="navbar-brand" href="index.html" style="color:#1BB0CE;font-family:ubuntu;font-size:30px">erthe</a>
+					<a class="navbar-brand" href="index.html" style="color:#1BB0CE;font-family:Roboto;font-size:30px">erthe</a>
 				</div>
 
 				<div class="collapse navbar-collapse navbar-ex1-collapse">
