--- a/static/index.html
+++ b/static/index.html
@@ -26,17 +26,17 @@
 			#map { margin-top: 65px;margin-left: 15px; height: 200px; width: 1000px; b }
 
 			html { height: 100% }
-			body { height: 100%; margin: 0; padding: 0; background: #ecf0f1; }
+			body { height: 100%; margin: 0; padding: 0; background: #000; }
 			
 			.myclass{
 				font-size: 25px;
 				font-family: Roboto,sans-serif;
-			    color: #000;
+			    color: #fff;
 			    padding-bottom: 50px;
 			  	padding-left:70px; 
 			  	padding-right: 10px;
 			    width: 100%;
-			    background: #ecf0f1;
+			    background: #000;
 			    text-rendering: optimizelegibility;
 			}
 			    
@@ -58,7 +58,7 @@
 	<body   ng-controller="MsgListCtrl">
 
 		<!-- ********************Header bar******************** -->
-		<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+		<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation" >
 
 			<div class="container-fluid">
 				<div class="navbar-header">
@@ -69,7 +69,6 @@
 				<div class="collapse navbar-collapse navbar-ex1-collapse">
 				<form class="navbar-form navbar-left" role="search">
 					<div class="form-group">
-						
 						<input type="text" ng-model="criteria" class="form-control" placeholder="Filter posts by place">
 			        </div>
 			    </form>
