--- a/static/index.html
+++ b/static/index.html
@@ -23,7 +23,7 @@
 
 		<style>
 			
-			#map { margin-top: 65px;margin-left: 15px; height: 200px; width: 1000px; b }
+			#map { margin-top: 65px;margin-left: 15px; height: 200px; }
 
 			html { height: 100% }
 			body { height: 100%; margin: 0; padding: 0; background: #000; }
