added clickablilty to search results

--- a/static/index.html
+++ b/static/index.html
@@ -102,7 +102,7 @@
 		<ul class="list-group" style="float:left">
 			<span class="label label-primary" ng-click="close_search()" style="margin:10px">cancel</i></span>
   			<li class="list-group-item" ng-click="goto_map($index)"  ng-repeat="result in searchResults" style="margin:10px;width:200px;font-family:Roboto">
-    			{{result.display_name}}
+    		<a href="">	{{result.display_name}}</a>
   			</li>
   					
 		</ul>
