Major re-design

--- a/static/js/post_modal.html
+++ b/static/js/post_modal.html
@@ -22,12 +22,12 @@
 
         <li >
            <a href="" style="outline:none">
-            <span ng-click="show_selectedpolitics = !show_selectedpolitics;addTag(4)"  class="label label-primary"><i ng-show="show_selectedpolitics" class="fa fa-check"></i>&nbsp;politics</span>        
+            <span ng-click="show_selectedpolitics = !show_selectedpolitics;addTag(4)"  class="label label-primary"><i ng-show="show_selectedpolitics" class="fa fa-check"></i>&nbsp;confession</span>        
           </a> 
         </li>
        <li >
            <a href="" style="outline:none">
-            <span ng-click="show_selectedtech = !show_selectedtech;addTag(1)"  class="label label-success"><i ng-show="show_selectedtech" class="fa fa-check"></i>&nbsp;verified</span>        
+            <span ng-click="show_selectedtech = !show_selectedtech;addTag(1)"  class="label label-success"><i ng-show="show_selectedtech" class="fa fa-check"></i>&nbsp;opinion</span>        
           </a>
          </li>
        <li >
