--- a/static/index.html
+++ b/static/index.html
@@ -70,10 +70,12 @@
 				</div>
 
 				<div class="collapse navbar-collapse navbar-ex1-collapse">
-				<form class="navbar-form navbar-left" role="search">
+				<form class="navbar-form navbar-left form-inline" role="search">
 					<div class="form-group">
 						<input type="text" class="form-control" ng-model="criteria" style="width:500px" placeholder="search" >
-						<button ng-click="search()" ><i class="fa fa-search"></i></button>
+<button type="button" class="btn btn-primary btn-md">
+  <span class="glyphicon glyphicon-search"></span>
+</button>
 					</div>
 				</form>
 					
@@ -95,7 +97,7 @@
 		<div style="display:block;margin-top:55px" class="container">
 			<ul class="nav nav-pills" style="margin-top:10px;display:inline-block"  >
 					<!--<ul class="nav nav-pills nav pull-right" style="margin-top:5px"  ng-repeat="myplace in myplacesList">-->
-						<li style="clickable:true" ng-repeat="myplace in myplacesList">
+						<li style="clickable:true" ng-repeat="myplace in myplacesList track by $index">
 							<a ng-click="Viewposts($index)" data-toggle="modal" data-target="#myModal" href="" style="color: #36B43C;clickable:true;outline:none;font-size:13px">
 								<strong>
 									{{myplace}}&nbsp;<small ng-if="!$first">({{myplaceHierarchy[$index]}})</small>
