--- a/static/index.html
+++ b/static/index.html
@@ -73,7 +73,7 @@
 				<form class="navbar-form navbar-left form-inline" role="search">
 					<div class="form-group">
 						<input type="text" class="form-control" ng-model="criteria" style="width:500px" placeholder="search" >
-<button type="button" class="btn btn-primary btn-md">
+<button type="button" ng-click="search()" class="btn btn-primary btn-md">
   <span class="glyphicon glyphicon-search"></span>
 </button>
 					</div>
