button color changes

--- a/static/index.html
+++ b/static/index.html
@@ -73,7 +73,7 @@
 				<form class="navbar-form navbar-left form-inline" role="search">
 					<div class="form-group">
 						<input type="text" class="form-control" ng-model="criteria" style="width:500px" placeholder="search" >
-<button type="button" ng-click="search()" class="btn btn-primary btn-md">
+<button type="button" ng-click="search()" class="btn btn-primary btn-md" style=";background-color:#000">
   <span class="glyphicon glyphicon-search"></span>
 </button>
 					</div>
@@ -83,7 +83,7 @@
 
 					<button type="button" href="" ng-click="openlogin()" class="btn btn-primary navbar-btn btn-sm pull-right" style="outline:none;margin-right:10px;background-color:#000">login / signup</button>
 
-					<button type="button" ng-click="openPostmodal()" class="btn btn-danger navbar-btn btn-sm pull-right" style="outline: none;margin-right:10px"><i class="fa fa-edit"></i>&nbsp;Post stuff</button>
+					<button type="button" ng-click="openPostmodal()" class="btn btn-danger navbar-btn btn-sm pull-right" style="outline: none;margin-right:10px;background-color:#000"><i class="fa fa-edit"></i>&nbsp;Post stuff</button>
 
 				</div>
 				
