--- a/static/index.html
+++ b/static/index.html
@@ -98,7 +98,7 @@
 			<ul class="nav nav-pills" style="margin-top:10px;display:inline-block"  >
 					<!--<ul class="nav nav-pills nav pull-right" style="margin-top:5px"  ng-repeat="myplace in myplacesList">-->
 						<li style="clickable:true" ng-repeat="myplace in myplacesList track by $index">
-							<a ng-click="Viewposts($index)" data-toggle="modal" data-target="#myModal" href="" style="color: #000;clickable:true;outline:none;font-size:13px">
+							<a ng-click="Viewposts($index)" data-toggle="modal" data-target="#myModal" href="" style="color: #e74c3c;clickable:true;outline:none;font-size:13px">
 								<strong>
 									{{myplace}}&nbsp;<small ng-if="!$first">({{myplaceHierarchy[$index]}})</small>
 								</strong>
