--- a/static/index.html
+++ b/static/index.html
@@ -42,6 +42,7 @@
 				text-rendering: optimizelegibility;
 
 			}
+
 				
 			.myclass2{
 				font-size: 40px;
@@ -146,10 +147,15 @@
 		<!-- ----------------------------------Alerts----------------------------------------------------- -->
 
 		<!-- ----------------------------------Modal----------------------------------------------------- -->
-
+<style type="text/css">
+ #myModal .modal-dialog  {
+  width: 800px;
+}
+</style>
 		<div class="modal fade" id="myModal" tabindex="-2" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+		
 		  <div class="modal-dialog container">
-			<div class="modal-content" style="width:800px">
+			<div class="modal-content">
 			  <div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 				<h4 class="modal-title" id="myModalLabel">
