--- a/static/index.html
+++ b/static/index.html
@@ -75,12 +75,18 @@
 				<form class="navbar-form navbar-left form-inline" role="search">
 					<div class="form-group">
 						<input type="text" class="form-control" ng-model="criteria" style="width:500px" placeholder="search" >
-				<button type="button" ng-click="search()" class="btn btn-primary btn-md" style=";background-color:#000"  data-toggle="tooltip" data-placement="left" title="search for cities,streets or places">
-				  <span class="glyphicon glyphicon-search"></span>
-				</button>
+
 					</div>
 				</form>
+				
+				<a href="" data-toggle="tooltip" data-placement="bottom" title="New hype feature here">					
+				<h3 type="button" ng-click="search()"  style="outline: none;margin-top:10px"  class="navbar-btn pull-left">
+					<span class="fa fa-search" style="margin:0px;color:#59ABE3">
 					
+					</span>
+				</h3>
+				</a>
+
 				<a href="" data-toggle="tooltip" data-placement="bottom" title="New hype feature here">					
 				<h2 type="button" ng-click="openPostmodal()"  style="outline: none;margin-right:50px;"  class="navbar-btn pull-right">
 					<span class="fa fa-map-marker" style="margin:0px;color:#e74c3c">
