--- a/static/index.html
+++ b/static/index.html
@@ -9,7 +9,7 @@
 		<script src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js"></script>
 		<script src="lib/js/angular-route.min.js"></script>
-		<script src="js/controllers.js"></script>
+		<script src="/alt_controller.js"></script>
 		<script src="js/ui-bootstrap-custom-tpls-0.10.0.min.js"></script>
 		<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 		
@@ -18,6 +18,14 @@
 		<link rel="stylesheet"href="//fonts.googleapis.com/css?family=Roboto:light,regular,medium,thin,italic,mediumitalic,bold" title="roboto">
 		<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 		<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
+		<script src='https://api.tiles.mapbox.com/mapbox.js/v1.6.2/mapbox.js'></script>
+<link href='https://api.tiles.mapbox.com/mapbox.js/v1.6.2/mapbox.css' rel='stylesheet' />
+		<script src='//api.tiles.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/leaflet.markercluster.js'></script>
+<link href='//api.tiles.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/MarkerCluster.css' rel='stylesheet' />
+<link href='//api.tiles.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/MarkerCluster.Default.css' rel='stylesheet' />
+
+<!-- Example data. -->
+
 
 		<strong><title>erthe</title></strong>
 
@@ -87,9 +95,9 @@
 				</h3>
 				</a>
 
-				<a href="" data-toggle="tooltip" data-placement="bottom" title="New hype feature here">					
-				<h2 type="button" ng-click="openPostmodal()"  style="outline: none;margin-right:50px;"  class="navbar-btn pull-right">
-					<span class="glyphicon glyphicon-map-marker" style="margin:0px;color:#e74c3c">
+				<a href="" data-toggle="tooltip" data-placement="bottom" title="New hype feature here soon">					
+				<h2 type="button" ng-click="create_hype()"  style="outline: none;margin-right:50px;"  class="navbar-btn pull-right">
+					<span class="fa fa-map-marker" style="margin:0px;color:#e74c3c">
 					
 					</span>
 				</h2>
