--- a/static/index.html
+++ b/static/index.html
@@ -9,7 +9,7 @@
 		<script src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js"></script>
 		<script src="lib/js/angular-route.min.js"></script>
-		<script src="js/controllers.js"></script>
+		<script src="/alt_controller.js"></script>
 		<script src="js/ui-bootstrap-custom-tpls-0.10.0.min.js"></script>
 		<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 		
